Implement user authentication
- Add token generation
- Add finding users by name
- Improve documentation
